AWS-TF-Complex Cloud State management/security.tf
resource "aws_security_group" "cloud-state-bean-elb-sg" {
  name        = "cloud-state-bean-elb-sg"
  description = "Security group for bean-elb"
  vpc_id      = module.vpc.vpc_id
  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    protocol    = "tcp"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "cloud-state-bastion-sg" {
  name        = "cloud-state-bastion-sg"
  description = "Security group for bastion host ec2 instance"
  vpc_id      = module.vpc.vpc_id
  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
}



resource "aws_security_group" "cloud-state-beanprod-sg" {
  name        = "cloud-state-beanprod-sg"
  description = "Security group for beanstalk instance"
  vpc_id      = module.vpc.vpc_id

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 22
    protocol        = "tcp"
    to_port         = 22
    security_groups = [aws_security_group.cloud-state-bastion-sg.id]
  }

}

resource "aws_security_group" "cloud-state-backend-sg" {
  name        = "cloud-state-backend-sg"
  description = "Security group for RDS, active MQ, Elastic cache"
  vpc_id      = module.vpc.vpc_id

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 0
    protocol        = "-1"
    to_port         = 0
    security_groups = [aws_security_group.cloud-state-beanprod-sg.id]
  }

  ingress {
    from_port       = 3306
    protocol        = "tcp"
    to_port         = 3306
    security_groups = [aws_security_group.cloud-state-bastion-sg.id]
  }

}

resource "aws_security_group_rule" "sec_group_allow_itself" {
  type                     = "ingress"
  from_port                = 0
  to_port                  = 65535
  protocol                 = "tcp"
  security_group_id        = aws_security_group.cloud-state-backend-sg.id
  source_security_group_id = aws_security_group.cloud-state-backend-sg.id

}
